Start changing site to sidebar :)
Still need:

 - mobile
 - cleanup

Nice to haves:
 - change colors
 - dark mode

--- a/_config.yml
+++ b/_config.yml
@@ -30,12 +30,14 @@ github_username:  evantypanski
 markdown: kramdown
 kramdown:
     input: GFM
-    syntax_highlighter: rouge
+    syntax_highlighter: tree-sitter
+
 theme: minima
 include: ['_pages']
 plugins:
   - jekyll-feed
   - jekyll-assets
+  - kramdown/syntax_tree_sitter
 
 collections:
     portfolio:
