--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Evan Typanski
-email: evantypanski@gmail.com
+email: etypdev@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Hi!
 baseurl: "" # the subpath of your site, e.g. /blog
